# mnist-deepproblog

./: .gitignore  README.md  environment.yml  mnist_deepproblog_verification.py  pgd.py  pyproject.toml
checkpoints/: trained_model.pth
results/: results_IBP_0.0001.json  results_IBP_0.001.csv  results_IBP_0.001.json  results_IBP_0.01.csv  results_IBP_0.01.json  results_IBP_1e-05.json
