[tool.poetry]
name = "mnist_deepproblog_verification"
version = "0.1.0"
description = "Deep Prob Log verification for simple MNIST"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
deepproblog = "^2.0.5"
problog = "^2.2.4"
pysdd = {git = "https://github.com/wannesm/PySDD.git", rev = "master"}
auto-lirpa = {git = "https://github.com/Verified-Intelligence/auto_LiRPA"}
torchvision = "^0.15.2"
pandas = "^2.2.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
